...
            android:gravity="left|center_vertical"
            android:textSize="@dimen/setting_list_item_title_text_size"
            autofit:minTextSize="@dimen/min_text_size_12"
            android:layout_marginRight="8dp"/>

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/switchWidget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:clickable="false"
            android:focusable="false"
            android:scaleX="1.2"
...
